Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30307

KILL command issued inside a transaction is problematic for galera replication

    XMLWordPrintable

Details

    Description

      KILL command is replicated as TOI replication in galera cluster. If KILL is issued inside a transaction, the galera side transaction context is lost.

      This issue surfaced by RQG grammar testing for MDEV-29684

      As a fix, consider implicit commit for the surrounding transaction before KILL execution.

      Attachments

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            seppo Seppo Jaakola
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3.5d
                3.5d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.