MDEV-30307 KILL command inside a transaction causes problem for galera replication

Added new test scenario in galera.galera_bf_kill test to make the issue surface,
The tetst scenario has a multi statement transaction containing a KILL command.
When the KILL is submitted, another transaction is replicated, which causes BF abort for the KILL command processing.
Handling BF abort rollback while executing KILL command causes node hanging, in this scenario.

sql_kill() and sql_kill_user() functions have now fix, to perform implicit commit before starting the KILL command
execution. BEcause of the implicit commit, the KILL execution will not happen inside transaction context anymore.